@@ -2,6 +2,4 @@
 /.build/
 *.swp
 .DS_Store
-/_Inline
 *.bak
-/inline*
