@@ -14,9 +14,6 @@ github_user   = PerlAlien
 installer     = ModuleBuild
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
-diag          = +Inline
-diag          = +Inline::C
-diag          = +Inline::CPP
 diag          = +HTML::LinkExtor
 diag          = +LWP::UserAgent
 diag          = +Digest::SHA
@@ -67,10 +64,6 @@ contributor = Nicholas Shipp (nshp)
 contributor = Petr Pisar (ppisar)
 contributor = Alberto Simões (ambs)
 
-[PruneFiles]
-match = ^_Inline
-match = ^inline
-
 [RemovePrereqs]
 ; core pragma
 remove = strict
@@ -96,12 +89,8 @@ remove = Text::Balanced
 
 ; optional
 remove = HTML::LinkExtor
-remove = Inline
 remove = LWP::UserAgent
 remove = Digest::SHA
 remove = Acme::Alien::DontPanic
 remove = Acme::Alien::DontPanic2
-remove = Inline
-remove = Inline::C
-remove = Inline::CPP
 
