@@ -1,6 +1,8 @@
 Revision history for Perl module {{$dist->name}}
 
 {{$NEXT}}
+  - Move inline tests from this distro to Acme::Alien::DontPanic
+    and Acme::Alien::DontPanic2 (gh#22)
 
 1.14      2020-02-05 19:08:06 -0700
   - Add use strict and warnings to generated Install/Files.pm
